2008-09-25    <neal@bcn.boulder.co.us>

	* electionaudit/models.py (Choice.__str__): 
	add django models and get them working with django generic admin

2008-09-22    <neal@bcn.boulder.co.us>
	* makeauditunits.py: 
	Do single-row output for --subtract
	Partly move to printf() vs print
	Move files to testdata, test again
	Add more abbreviations
	Fix replace_dict to be ordered list: replacements
	Move data info to testnotes
	
2008-09-22    <neal@bcn.boulder.co.us>

	* makeauditunits.py: 
	Add --contest option
	add --subtract to report differences for incrementals
	sort reports

2008-09-22    <neal@bcn.boulder.co.us>

	* makeauditunits.py: 
	Separate "Early" from "Absentee", report both

2008-09-20    <neal@bcn.boulder.co.us>

	* makeauditunits.py (make_audit_unit): 
	divide into early and election results, without yet using Result class
	Version 0.3.0
	
2008-09-14    <neal@bcn.boulder.co.us>

	* makeauditunits.py (make_audit_unit):
	start profiling	
	general cleaning, todo additions
	fix parties to just get one
	work on better printing